5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1764_1183.log
== SUBMITION (2019-05-30 15:38:27) 
-- CODE:
from numpy import* 
vet = array(
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)


-- EXECUTION TIME:
0.217482
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:38:55) 
-- CODE:
from numpy import* 

vet = array(input()
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)


-- EXECUTION TIME:
0.203255
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:38:57) 
-- CODE:
from numpy import* 

vet = array(input()
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)


-- EXECUTION TIME:
0.245389
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 4
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:49:19) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
    if(v[i]>=0):
        po+=1
    i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
    if(v[i]>=0):
        v2[a]=v[i]
        a+=1
    i+=1
print(v2)

-- EXECUTION TIME:
0.470104
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
Vetor:[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
Vetor:[18 32 14 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:49:50) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
    if(v[i]>=0):
        po+=1
    i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
    if(v[i]>=0):
      v2[a]=v[i]
      a+=1
    i+=1
print(v2)

-- EXECUTION TIME:
0.548032
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:49:52) 
-- CODE:
from numpy import*
v= array(eval(input("Vetor:")))

i= 0
po= 0
a = 0
while(i < size(v)):
    if(v[i]>=0):
        po+=1
    i=i+1
v2= zeros(po,dtype=int)
i=0
while (i < size(v)):
    if(v[i]>=0):
      v2[a]=v[i]
      a+=1
    i+=1
print(v2)

-- EXECUTION TIME:
0.511271
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
